<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/rgb_change_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:text="@string/rgb_change_title"
        android:textSize="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="0px"
        android:layout_marginRight="12dp"
        android:text="AARRGGBB"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/rgb_hex_edit"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:digits="1234567890ABCDEF#"
        android:editable="true"
        android:maxLength="9"
        android:maxLines="1"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/rgb_r_edit"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/rgb_change_title"
        android:digits="1234567890"
        android:editable="false"
        android:maxLength="3"
        android:maxLines="1"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/rgb_g_edit"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/rgb_r_seek"
        android:digits="1234567890"
        android:editable="false"
        android:maxLength="3"
        android:maxLines="1"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/rgb_b_edit"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/rgb_g_seek"
        android:digits="1234567890"
        android:editable="false"
        android:maxLength="3"
        android:maxLines="1"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/rgb_color_preview"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_above="@id/rgb_change_id"
        android:layout_below="@id/rgb_change_title" />

    <SeekBar
        android:id="@+id/rgb_r_seek"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/rgb_change_title"
        android:layout_toLeftOf="@id/rgb_r_edit"
        android:layout_toRightOf="@id/rgb_color_preview"
        android:max="255"
        android:min="0" />

    <SeekBar
        android:id="@+id/rgb_g_seek"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/rgb_r_seek"
        android:layout_toLeftOf="@id/rgb_g_edit"
        android:layout_toRightOf="@id/rgb_color_preview"
        android:max="255"
        android:min="0" />

    <SeekBar
        android:id="@+id/rgb_b_seek"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/rgb_g_seek"
        android:layout_toLeftOf="@id/rgb_b_edit"
        android:layout_toRightOf="@id/rgb_color_preview"
        android:max="255"
        android:min="0" />

    <TextView
        android:id="@+id/rgb_change_id"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/rgb_b_seek"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:text="@string/rgb_change_id"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/rgb_edit_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/rgb_b_seek"
        android:layout_toRightOf="@id/rgb_change_id"
        android:digits="1234567890"
        android:lines="1"
        android:maxLength="3"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/rgb_op_background"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/rgb_change_id"
        android:layoutDirection="rtl"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/rgb_change_cancel"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textSize="14sp" />

        <Button
            android:id="@+id/rgb_change_ok"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:text="@string/ok"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>